# factorial_demo

./: .clang-format  .clang-format-ignore  .github-ci.yml  .gitignore  .gitmodules  .shellcheck  .shellcheck-ignore  CMakeLists.txt  CMakelists.txt  README.md  factorial_config.h.in
src/: Factorial.cpp  Factorial.h  main.cpp
test/: CMakeLists.txt  CMakeLists.txt.ini  factorial_tests.cpp  main.cpp  test.cpp
